# Achievd

./: .env.example  .gitignore  LICENSE  README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  vitest.config.ts
desktop/: after-pack.cjs  dev.cjs  main.cjs  prepare-next.cjs  start-next.cjs
prisma/: schema.prisma
prisma/migrations/20260723143000_init/: migration.sql
prisma/migrations/20260723215000_user_game_display_options/: migration.sql
prisma/migrations/20260723220500_user_game_custom_banner/: migration.sql
prisma/migrations/20260723224500_user_game_hidden_indexes/: migration.sql
prisma/migrations/20260724011500_achievement_groups/: migration.sql
prisma/migrations/20260724143000_game_genres/: migration.sql
scripts/: start-postgres.ps1  stop-postgres.ps1
src/: proxy.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: disable-middle-click-autoscroll.tsx
src/config/: default-preferences.ts  env.ts  product.ts
src/lib/: calculations.ts  errors.ts  steamgriddb.ts  types.ts  utils.ts
tests/components/: achievement-list-client.test.tsx  game-library-client.test.tsx  planner-client.test.tsx  states.test.tsx
tests/fixtures/: app-fixtures.ts
tests/unit/: achievement-groups.test.ts  authorisation.test.ts  calculations.test.ts  custom-images.test.ts  local-accounts.test.ts  recommendations.test.ts  steam-parsers.test.ts  sync-merge.test.ts
(+74 files in other folders)
