[package]
name = "achievd"
version = "0.1.0"
description = "Standalone Steam achievement-tracking desktop app."
authors = ["Achievd"]
edition = "2021"

[lib]
name = "achievd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
